# docs/swagger.json
@@ -8,6 +8,25 @@
     },
     "basePath": "/api",
     "paths": {
+        "/v1/auth/info": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "[Auth] {v1}"
+                ],
+                "responses": {}
+            }
+        },
         "/v1/auth/login": {
             "post": {
                 "consumes": [
